--- a/templates/artist.html
+++ b/templates/artist.html
@@ -1,7 +1,10 @@
 {% set navlinks = [ { 'name': 'Venues', 'class': '', 'link': '/venues'}, {
 'name': 'Artists', 'class': '', 'link': '/artists'}, { 'name': 'Shows', 'class':
-'', 'link': '/shows'} ] %} {% extends 'layouts/main.html' %} {% block title
-%}Artists{% endblock %} {% block styles %} {% endblock %} {% block content %}
+'', 'link': '/shows'} ] %}
+{% extends 'layouts/main.html' %}
+{% block title %}{{ data.artist.name }}{% endblock %}
+{% block styles %} {% endblock %}
+{% block content %}
 <div class="container">
   <div style="margin-top: 1%;">
     <div class="row">
@@ -41,9 +44,7 @@
           <span class="text-primary" style="font-size: 1.4rem;">
             <i class="fas fa-link"></i>
           </span>
-          <a href="{{ data.artist.website }}"
-            >{{ data.artist.website[:25] }}</a
-          >
+          <a href="{{ data.artist.website }}">{{ data.artist.website[:25] }}</a>
         </div>
         {% endif %}
         {% if data.artist.facebook_link != "None" %}
@@ -82,9 +83,15 @@
               {% if upcoming_shows_count.append(1) %}{% endif %}
               <div class="col-5">
                 <div class="card card-block">
-                  <img src="{{ show.venue.image_link }}" class="card-img-top" alt="..." />
+                  <img
+                    src="{{ show.venue.image_link }}"
+                    class="card-img-top"
+                    alt="..."
+                  />
                   <div class="card-body">
-                    <a href="/venues/{{ show.venue.id }}" class="card-title">{{ show.venue.name }}</a>
+                    <a href="/venues/{{ show.venue.id }}" class="card-title"
+                      >{{ show.venue.name }}</a
+                    >
                     <p class="card-text">
                       {{ show.start_time.strftime('%A %b %-d %Y at %-I:%M%p') }}
                     </p>
@@ -115,9 +122,15 @@
               {% if past_shows_count.append(1) %}{% endif %}
               <div class="col-5">
                 <div class="card card-block">
-                  <img src="{{ show.venue.image_link }}" class="card-img-top" alt="..." />
+                  <img
+                    src="{{ show.venue.image_link }}"
+                    class="card-img-top"
+                    alt="..."
+                  />
                   <div class="card-body">
-                    <a href="/venues/{{ show.venue.id }}" class="card-title">{{ show.venue.name }}</a>
+                    <a href="/venues/{{ show.venue.id }}" class="card-title"
+                      >{{ show.venue.name }}</a
+                    >
                     <p class="card-text">
                       {{ show.start_time.strftime('%A %b %-d %Y at %-I:%M%p') }}
                     </p>
@@ -134,7 +147,6 @@
             </div>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
