--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -72,7 +72,7 @@
     <nav class="navbar sticky-top navbar-custom navbar-expand-sm">
       <form class="form-inline">
         <div class="form-group mx-sm-3 mb-2">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/">
             <span style="font-size: 1.4rem;">
               <span class="custom-color">
                 <i class="fas fa-fire"></i>
