--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -230,7 +230,7 @@
                 <input type="text" class="form-control" id="create-show-modal-venue-id" name="venue_id" placeholder="Venue ID">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" id="create-show-modal-start_time" name="start_time" placeholder="Date of the show .. YYYY-MM-DD HH:MM:SS">
+                <input type="text" class="form-control" id="create-show-modal-start_time" name="start_time" value="{{ '' | date_now }}" placeholder="Date of the show .. YYYY-MM-DD HH:MM:SS">
               </div>
             </form>
           </div>
